lab done sense bonus

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,3 +1,8 @@
-<div>
-
+<div class="Home">
+    <img src="/images/beer.png" alt="Foto de un cartoon tot cutre MF">  
+     {{!-- aqui no li posem /public a devant per el que tenim ficat a la linea 12 de app.js --}}
+    <li><a href="/beers">Check the Beers!</a></li>
+    <li><a href="/random-beer">Check a Random Beer</a></li>
+    
 </div>
+
